--- a/Portfolio.css
+++ b/Portfolio.css
@@ -252,7 +252,7 @@ opacity: 1;
 
 .contacto
 {
-  background-image:url(/imgs/contact_bg.png) ;
+  background-image:url(./imgs/contact_bg.png) ;
   background-color: rgba(42, 79, 247, 0.616);;
   
   color:#FFF;
